Replace Collections.emptyX() by X.of()