@@ -152,11 +152,11 @@ public class Var implements LValue, RValue {
 
         // Contract: if the following fields are empty, they must point to
         // Collections.emptyList();
-        private List<LoadField> loadFields = Collections.emptyList();
-        private List<StoreField> storeFields = Collections.emptyList();
-        private List<LoadArray> loadArrays = Collections.emptyList();
-        private List<StoreArray> storeArrays = Collections.emptyList();
-        private List<Invoke> invokes = Collections.emptyList();
+        private List<LoadField> loadFields = List.of();
+        private List<StoreField> storeFields = List.of();
+        private List<LoadArray> loadArrays = List.of();
+        private List<StoreArray> storeArrays = List.of();
+        private List<Invoke> invokes = List.of();
 
         private List<LoadField> getLoadFields() {
             return unmodifiable(loadFields);
